--- a/services/presentation/helm/templates/presentation.yml
+++ b/services/presentation/helm/templates/presentation.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: "{{ .Values.presentation.image.repository }}:{{ .Values.front_version }}"
+          image: "{{ .Values.presentation_image }}:{{ .Values.front_version }}"
           ports:
             - containerPort: 80
