--- a/services/presentation/helm/templates/presentation-ingress.yml
+++ b/services/presentation/helm/templates/presentation-ingress.yml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "ecommerce-ip"
     networking.gke.io/managed-certificates: "presentation-certificate"
+    networking.gke.io/v1beta1.FrontendConfig: "presentation-config"
 spec:
   rules:
     - host: "zahidgalea.com"
