--- a/services/presentation/helm/values.yaml
+++ b/services/presentation/helm/values.yaml
@@ -4,6 +4,4 @@ presentation:
 
 namespace: "ecommerce"
 
-presentation_image: us-east1-docker.pkg.dev/ecommerce-dev-392819/front-app/flutter-app
-front_version: 0.0.1-alpha
-environment: dev
+presentation_image: us-east1-docker.pkg.dev/ecommerce-dev-392819/front-app/flutter-app:0.0.1-alpha
